tests/non-regression/058-err-missing-connection-args.dfd
process A  a
flow A
